Latest by Nov 6
Doctor Registration

--- a/COMP231Project/res/values/strings.xml
+++ b/COMP231Project/res/values/strings.xml
@@ -33,9 +33,11 @@
     <string name="title_activity_google_map_services">GoogleMapServices</string>
     <string name="title_activity_patient_account">PatientAccount</string>
     <string name="title_activity_receptionist">Receptionist</string>
-    <string name="title_activity_receptionist_patient_search">ReceptionistPatientSearch</string>
-    <string name="title_activity_receptionist_doctor_search">ReceptionistDoctorSearch</string>
-    <string name="title_activity_receptionist_patient_profile_view">ReceptionistPatientProfileView</string>
-    <string name="title_activity_receptionist_doctor_profile_view">ReceptionistDoctorProfileView</string>
+    <string name="title_activity_doctor">Doctor</string>
+    <string name="title_activity_add_doctor">AddDoctor</string>
+    <string name="title_activity_add_receptionist">AddReceptionist</string>
+    <string name="title_activity_addnurse">Addnurse</string>
+    <string name="title_activity_add_pharmacist">AddPharmacist</string>
+    <string name="title_activity_doctor_account">DoctorAccount</string>
 
 </resources>
