--- a/COMP231Project/COMP231Project/res/values/strings.xml
+++ b/COMP231Project/COMP231Project/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="title_activity_receptionist_doctor_profile_view">ReceptionistDoctorProfile</string>
     <string name="title_activity_admin_account">AdminAccount</string>
     <string name="title_activity_admin_registration">AdminRegistration</string>
+    <string name="title_activity_receptionist_account">ReceptionistAccount</string>
 
 </resources>
