--- a/COMP231Project/res/values/strings.xml
+++ b/COMP231Project/res/values/strings.xml
@@ -45,5 +45,21 @@
     <string name="title_activity_receptionist_doctor_profile_view">ReceptionistDoctorProfile</string>
     <string name="title_activity_admin_account">AdminAccount</string>
     <string name="title_activity_admin_registration">AdminRegistration</string>
+    <string name="title_activity_receptionist_schedule_appointment">ReceptionistScheduleAppointment</string>
+    <string name="title_activity_admin_doctor_search_to_add_schedule">AdminDoctorSearchToAddSchedule</string>
+    <string name="title_activity_admin_add_doctor_schedule">AdminAddDoctorSchedule</string>
+
+    <!-- Spinner array for the Day values -->
+    <string-array name="spinnerDay">
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Saturday</item>
+        <item>Sunday</item>
+    </string-array>
+
+    <string name="title_activity_receptionist_view_all_patients">ReceptionistViewAllPatients</string>
 
 </resources>
