I finished patient home page and receptionistviewdoctor activities.
So, I completed 2 stories for  patient can view his profile and
receptionist can view all doctors.

--- a/COMP231Project/res/values/strings.xml
+++ b/COMP231Project/res/values/strings.xml
@@ -64,5 +64,7 @@
     <string name="title_activity_receptionist_view_all_patients">ReceptionistViewAllPatients</string>
     <string name="title_activity_receptionist_account">ReceptionistAccount</string>
     <string name="title_activity_receptionistdb">Receptionistdb</string>
+    <string name="title_activity_receptionist_view_all_doctor">ReceptionistViewAllDoctor</string>
+    <string name="title_activity_patient_homepage">PatientHomepage</string>
 
 </resources>
