Admin can register LabStaff

--- a/COMP231Project/res/values/strings.xml
+++ b/COMP231Project/res/values/strings.xml
@@ -64,7 +64,8 @@
     <string name="title_activity_receptionist_view_all_patients">ReceptionistViewAllPatients</string>
     <string name="title_activity_receptionist_account">ReceptionistAccount</string>
     <string name="title_activity_receptionistdb">Receptionistdb</string>
-    <string name="title_activity_receptionist_view_all_doctor">ReceptionistViewAllDoctor</string>
-    <string name="title_activity_patient_homepage">PatientHomepage</string>
+    <string name="title_activity_add_lab">AddLab</string>
+    <string name="title_activity_lab_account">LabAccount</string>
+    <string name="title_activity_lab">Lab</string>
 
 </resources>
