Doctor is able to write prescription
1. doctor home page modified
2. doctor can keep record of Appointment and prescriptions.
3. Buttons added.

--- a/COMP231Project/res/values/strings.xml
+++ b/COMP231Project/res/values/strings.xml
@@ -28,27 +28,27 @@
     <!--  -->
     <string name="title_activity_hospital_admin">HospitalAdmin</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_patient_registration">PatientRegistration</string>
-    <string name="title_activity_doctor_registration">DoctorRegistration</string>
+    <string name="title_activity_patient_registration">Patient Registration</string>
+    <string name="title_activity_doctor_registration">Doctor Registration</string>
     <string name="title_activity_google_map_services">GoogleMapServices</string>
-    <string name="title_activity_patient_account">PatientAccount</string>
+    <string name="title_activity_patient_account">Patient Account</string>
     <string name="title_activity_receptionist">Receptionist</string>
     <string name="title_activity_doctor">Doctor</string>
-    <string name="title_activity_add_doctor">AddDoctor</string>
-    <string name="title_activity_add_receptionist">AddReceptionist</string>
-    <string name="title_activity_addnurse">Addnurse</string>
-    <string name="title_activity_add_pharmacist">AddPharmacist</string>
-    <string name="title_activity_doctor_account">DoctorAccount</string>
-    <string name="title_activity_receptionist_patient_search">ReceptionistPatientSearch</string>
-    <string name="title_activity_receptionist_doctor_search">ReceptionistDoctorSearch</string>
-    <string name="title_activity_receptionist_patient_profile_view">ReceptionistPatientProfile</string>
-    <string name="title_activity_receptionist_doctor_profile_view">ReceptionistDoctorProfile</string>
-    <string name="title_activity_admin_account">AdminAccount</string>
-    <string name="title_activity_admin_registration">AdminRegistration</string>
-    <string name="title_activity_receptionist_schedule_appointment">ReceptionistScheduleAppointment</string>
-    <string name="title_activity_admin_doctor_search_to_add_schedule">AdminDoctorSearchToAddSchedule</string>
-    <string name="title_activity_admin_add_doctor_schedule">AdminAddDoctorSchedule</string>
-
+    <string name="title_activity_add_doctor">Add Doctor</string>
+    <string name="title_activity_add_receptionist">Add Receptionist</string>
+    <string name="title_activity_addnurse">Add nurse</string>
+    <string name="title_activity_add_pharmacist">Add Pharmacist</string>
+    <string name="title_activity_doctor_account">Doctor Account</string>
+    <string name="title_activity_receptionist_patient_search">Patient Search</string>
+    <string name="title_activity_receptionist_doctor_search">Doctor Search</string>
+    <string name="title_activity_receptionist_patient_profile_view">Patient Profile</string>
+    <string name="title_activity_receptionist_doctor_profile_view">Doctor Profile</string>
+    <string name="title_activity_admin_account">Admin Account</string>
+    <string name="title_activity_admin_registration">Admin Registration</string>
+    <string name="title_activity_receptionist_schedule_appointment">Schedule Appointment</string>
+    <string name="title_activity_admin_doctor_search_to_add_schedule">Doctor Search To Add Schedule</string>
+    <string name="title_activity_admin_add_doctor_schedule">Add Doctor Schedule</string>
+    <string name="title_activity_doctor_login_btn">Doctor Main</string>
     <!-- Spinner array for the Day values -->
     <string-array name="spinnerDay">
         <item>Select Day</item>
@@ -61,14 +61,16 @@
         <item>Sunday</item>
     </string-array>
 
-    <string name="title_activity_receptionist_view_all_patients">ReceptionistViewAllPatients</string>
-    <string name="title_activity_receptionist_account">ReceptionistAccount</string>
+    <string name="title_activity_receptionist_view_all_patients">All Patients</string>
+    <string name="title_activity_receptionist_account">Receptionist Account</string>
     <string name="title_activity_receptionistdb">Receptionistdb</string>
-    <string name="title_activity_receptionist_view_all_doctor">ReceptionistViewAllDoctor</string>
-    <string name="title_activity_patient_homepage">PatientHomepage</string>
-    <string name="title_activity_lab_account">LabAccount</string>
-    <string name="title_activity_add_lab">AddLab</string>
-    <string name="title_activity_doctor_home_page">DoctorHomePage</string>
+    <string name="title_activity_receptionist_view_all_doctor">All Doctor</string>
+    <string name="title_activity_patient_homepage">Patient Home page</string>
+    <string name="title_activity_lab_account">Lab Account</string>
+    <string name="title_activity_add_lab">Add Lab</string>
+    <string name="title_activity_doctor_home_page">Doctor Profile</string>
     <string name="title_activity_cal_view">CalView</string>
+    <string name="title_activity_patient_visit_doctor_on_appointment">Appointment Info</string>
+    <string name="title_activity_patient_profile">PatientProfile</string>
 
 </resources>
